--- a/CAPSTONE_TEAM01_2024/Views/ProfileManager/Index_ProfileManager.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/ProfileManager/Index_ProfileManager.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<CAPSTONE_TEAM01_2024.Models.ProfileManagerModel>
+
 @if (TempData["Message"] != null)
 {
 	<div class="alert alert-@TempData["MessageType"]">
@@ -35,8 +36,8 @@
 						</div>
 						<div class="col">
 							<nav class="navbar navbar-light bg-light">
-								<form class="d-flex ms-auto">
-									<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+								<form class="d-flex ms-auto" asp-controller="ProfileManager" asp-action="Index_ProfileManager" method="get">
+									<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" value="@ViewData["Getemployeedetails"]" name="searchTerm">
 									<button class="btn btn-outline-success" type="submit">Search</button>
 								</form>
 							</nav>
@@ -45,7 +46,7 @@
 				</div>
 				<!-- /.card-header -->
 
-				<div class="card-body">
+				<td class="card-body">
 					<table class="table table-striped">
 						<thead>
 							<tr class="text-center">
@@ -59,6 +60,8 @@
 							</tr>
 						</thead>
 						<tbody>
+
+
 							@foreach (ProfileManagerModel profile in @Model)
 							{
 								<tr class="table-row">
@@ -91,10 +94,20 @@
 
 							<!-- Additional rows can go here -->
 						</tbody>
+
 					</table>
-				</div>
+					@if (ViewBag.Message != null)
+					{
+
+						<span class="alert" style="text-align: center;">
+							@ViewBag.Message
+						</span>
+					}
+
+				</div
 				<!-- /.card-body -->
 			</div>
+		
 		</div>
 	</main>
 	<!-- /.content -->
@@ -104,6 +117,10 @@
 <!-- Modal: Xem chi tiết -->
 <!-- Modal: Cập nhật -->
 <!-- Modal: Xóa -->
+
+<script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.5.1.min.js"></script>
+<script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.19.1/jquery.validate.min.js"></script>
+<script src="https://ajax.aspnetcdn.com/ajax/jquery.validate.unobtrusive/3.2.11/jquery.validate.unobtrusive.min.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
